--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,9 @@
+@import 'libs/animate';
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/font';
+@import 'libs/footer.min';
+@import 'libs/slick';
+
 @import 'base/variables';
 @import 'base/animations';
 * {
